# frust-engine

./: .gitignore  CMakeLists.txt  battle.md  camp.excalidraw  game.excalidraw  main.c  make.sh  old_main.c  readme.md  run.sh  style.rgs  test_arena.c  test_arena_copy.c
src/: types.h
src/battle/compositions/: ChunkArena_get_by_world_position.c
src/camp/: Camp_draw.c  Camp_move_army.c  Camp_progress_to_next_round.c  Camp_update.c  astar_pathfinding.c  tiefensuche_example.c  todolist.txt
src/camp/compositions/: Camp_calculate_income.c  Camp_calculate_tile_income.c  Camp_get_relation_number.c  Camp_get_relation_status.c  Camp_get_tile_index_from_xy_pos.c
src/menu/: Menu_draw.c  Menu_populate_new_scenario_from_mod.c
src/mods/lerman/: LERMAN_init.c
src/mods/mages/: MAGES_init.c
src/share/: arena.c  raygui.h
